.metadata/.plugins/org.eclipse.cdt.ui/HOLAMUNDO.build.log
15:09:56 **** Incremental Build of configuration Debug for project HOLAMUNDO ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HOLAMUNDO.o" "..\\src\\HOLAMUNDO.c" 
..\src\HOLAMUNDO.c: In function 'main':
..\src\HOLAMUNDO.c:25:14: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   25 |  for(i=0;i<10,i++)
      |              ^
..\src\HOLAMUNDO.c:25:18: error: expected ';' before ')' token
   25 |  for(i=0;i<10,i++)
      |                  ^
      |                  ;
..\src\HOLAMUNDO.c:27:3: warning: implicit declaration of function 'ImprimirArray'; did you mean 'imprimirArray'? [-Wimplicit-function-declaration]
   27 |   ImprimirArray(numeros,10);
      |   ^~~~~~~~~~~~~
      |   imprimirArray
..\src\HOLAMUNDO.c: In function 'promediarArray':
..\src\HOLAMUNDO.c:77:17: warning: passing argument 1 of 'atoi' makes pointer from integer without a cast [-Wint-conversion]
   77 |  resultado=atoi(acumulador)/longitud;
      |                 ^~~~~~~~~~
      |                 |
      |                 int
In file included from ..\src\HOLAMUNDO.c:12:
c:\mingw\include\stdlib.h:362:44: note: expected 'const char *' but argument is of type 'int'
  362 | _CRTIMP __cdecl __MINGW_NOTHROW  int atoi (const char *);
      |                                            ^~~~~~~~~~~~

15:09:57 Build Failed. 1 errors, 3 warnings. (took 918ms)

